--- a/src/components/styles/bio.css
+++ b/src/components/styles/bio.css
@@ -1,10 +1,12 @@
 article.bio {
 	margin: 4rem auto 1rem auto;
 	text-align: center;
+	font-size: small;
 }
 
-.hero h2 {
+.hero h1 {
 	line-height: 1.25;
+	font-size: large;
 }
 
 @media only screen and (min-width: 1000px) {
@@ -13,11 +15,16 @@ article.bio {
 		min-height: 550px;
 	}
 
+	.hero h1 {
+		font-size: 28px;
+	}
+
 	article.bio {
 		margin: 5rem auto;
 	    display: flex;
 	    justify-content: center;
 	    align-items: center;
+	    font-size: initial;
 	}
 
 	div.bio-summary {
