--- a/src/components/styles/bio.css
+++ b/src/components/styles/bio.css
@@ -4,14 +4,10 @@ article.bio {
 	font-size: small;
 }
 
-.hero h1 {
-	font-size: 25px;
-}
-
 .hero h2 {
 	text-align: center;
 	margin: 4rem auto 0 auto;
-	font-size: 20px;
+	text-transform: uppercase;
 }
 
 @media only screen and (min-width: 1000px) {
@@ -20,15 +16,9 @@ article.bio {
 		min-height: 700px;
 	}
 
-	.hero h1 {
-		line-height: 1.25;
-		font-size: 30px;
-	}
-
 	.hero h2 {
 		text-align: center;
 		margin: 5rem auto 2rem auto;
-		font-size: 25px;
 	}
 
 	article.bio {
